github_data_collector/src/data/issue_comment/jamie-allen_effective_akka.txt
Hi Jamie, when i try to compile the code, i got this:

/effective_akka> sbt
[info] Loading global plugins from /Users/aironman/.sbt/1.0/plugins
/Users/aironman/akka-microservices/effective_akka/project/build.sbt:1: error: value typesafeResolver is not a member of object sbt.Classpaths
resolvers += Classpaths.typesafeResolver
                        ^
[error] Type error in expression
Project loading failed: (r)etry, (q)uit, (l)ast, or (i)gnore? i
[warn] Ignoring load failure: no project loaded.
[error] java.lang.RuntimeException: Session not initialized.
[error] 	at scala.sys.package$.error(package.scala:26)
[error] 	at sbt.Project$.$anonfun$getOrError$1(Project.scala:442)
[error] 	at scala.Option.getOrElse(Option.scala:121)
[error] 	at sbt.Project$.getOrError(Project.scala:442)
[error] 	at sbt.Project$.session(Project.scala:448)
[error] 	at sbt.Project$.extract(Project.scala:453)
[error] 	at sbt.BuiltinCommands$.notifyUsersAboutShell(Main.scala:928)
[error] 	at sbt.BuiltinCommands$.$anonfun$notifyUsersAboutShell$3(Main.scala:937)
[error] 	at sbt.Command$.$anonfun$command$2(Command.scala:91)
[error] 	at sbt.Command$.process(Command.scala:181)
[error] 	at sbt.MainLoop$.processCommand(MainLoop.scala:151)
[error] 	at sbt.MainLoop$.$anonfun$next$2(MainLoop.scala:139)
[error] 	at sbt.State$$anon$1.runCmd$1(State.scala:246)
[error] 	at sbt.State$$anon$1.process(State.scala:250)
[error] 	at sbt.MainLoop$.$anonfun$next$1(MainLoop.scala:139)
[error] 	at sbt.internal.util.ErrorHandling$.wideConvert(ErrorHandling.scala:16)
[error] 	at sbt.MainLoop$.next(MainLoop.scala:139)
[error] 	at sbt.MainLoop$.run(MainLoop.scala:132)
[error] 	at sbt.MainLoop$.$anonfun$runWithNewLog$1(MainLoop.scala:110)
[error] 	at sbt.io.Using.apply(Using.scala:22)
[error] 	at sbt.MainLoop$.runWithNewLog(MainLoop.scala:104)
[error] 	at sbt.MainLoop$.runAndClearLast(MainLoop.scala:59)
[error] 	at sbt.MainLoop$.runLoggedLoop(MainLoop.scala:44)
[error] 	at sbt.MainLoop$.runLogged(MainLoop.scala:35)
[error] 	at sbt.StandardMain$.runManaged(Main.scala:138)
[error] 	at sbt.xMain.run(Main.scala:89)
[error] 	at xsbt.boot.Launch$$anonfun$run$1.apply(Launch.scala:109)
[error] 	at xsbt.boot.Launch$.withContextLoader(Launch.scala:128)
[error] 	at xsbt.boot.Launch$.run(Launch.scala:109)
[error] 	at xsbt.boot.Launch$$anonfun$apply$1.apply(Launch.scala:35)
[error] 	at xsbt.boot.Launch$.launch(Launch.scala:117)
[error] 	at xsbt.boot.Launch$.apply(Launch.scala:18)
[error] 	at xsbt.boot.Boot$.runImpl(Boot.scala:56)
[error] 	at xsbt.boot.Boot$.main(Boot.scala:18)
[error] 	at xsbt.boot.Boot.main(Boot.scala)
[error] Session not initialized.
[error] Use 'last' for the full log.


sbt sbtVersion
[warn] Executing in batch mode.
[warn]   For better performance, hit [ENTER] to switch to interactive mode, or
[warn]   consider launching sbt without any commands, or explicitly passing 'shell'
[info] Loading project definition from /Users/aironman/project
[info] Set current project to aironman (in build file:/Users/aironman/)
[info] 0.13.15


Hi, in this chapter, in "JobMaster.scala", the merge function can be simple because we can use reduceLeft instead of foldLeft.

Added new plugin version of SCCT https://github.com/sqality/scct, change scalatest version from snapshot to final in order to avoid error java.lang.AbstractMethodError: org.scalatest.tools.Framework$ScalaTestRunner.tasks, finally added more filters to .gitignore

